--- a/frontend/src/components/Quiz.css
+++ b/frontend/src/components/Quiz.css
@@ -78,10 +78,10 @@
     color: #28a745;
 }
 
-.quiz-completion p {
+/*.quiz-completion p {
     font-size: 16px;
     color: #ffcc00;
-}
+}*/
 
 /* Styling for the timer */
 .timer {
